WIP Android signing

--- a/android/SDL2_GradleApp/app/build.gradle
+++ b/android/SDL2_GradleApp/app/build.gradle
@@ -18,11 +18,17 @@ model {
     }
 
     android.buildTypes {
-        release {
+        debug {
             minifyEnabled = false
             proguardFiles.add(file('proguard-rules.txt'))
             ndk.debuggable = true
             debuggable = true
+        }
+        release {
+            minifyEnabled = false
+            proguardFiles.add(file('proguard-rules.txt'))
+            ndk.debuggable = false
+            debuggable = false
         }
     }
 
